@@ -1,8 +1,8 @@
 Package: rbenchmark
 Type: Package
 Title: Benchmarking routine for R
-Version: 0.4.1
-Date: 2012-08-14
+Version: 0.4.2
+Date: 2012-08-15
 Authors@R: c(
 	person("Wacek", "Kusnierczyk", role=c("aut", "cre"), email="waku@idi.ntnu.no"),
 	person("Dirk", "Eddelbuettel", role="cre", email="edd@debian.org"))
